fixed the demo guide and navigation sidemenu z indices on mobile

--- a/src/scss/partials/_mixin.scss
+++ b/src/scss/partials/_mixin.scss
@@ -529,7 +529,7 @@
   display: flex;
   height: fit-content;
   flex-direction: column;
-  z-index: 999;
+  z-index: 997;
   transition: 0.2s ease-in-out;
   cursor: pointer;
   :nth-child(1) {
